sandbox/slides/slides.css
html, body {
    font-family: 'Roboto', sans-serif;;
    background-color: lightgrey;
    width: 100%;
    height: 100%;
    padding: 0;
    margin: 0;
    border: 0;
}

/*----------------------------------------------------------------------------*/

#albums {
  font-size: x-large;
  margin: 0 auto;
  padding-top: 10px;
  text-align: center;
  position: relative;
}

.album_text {
    position: absolute;
    top: 90%;
    left: 0;
    right: 0;
    transform: translate(0, -50%);
    text-align: center;
    font-size: x-large;
    font-weight: 500;
    color: white;
}

/*----------------------------------------------------------------------------*/


nav {
  flex: 1;
  flex-basis: 92vw;
  max-width: 92vw;
  box-sizing: border-box;

  /* Center the menubar (the only child) */
  display: flex;
  justify-content: center;
  align-items: center;

  color: white;
  height: 4ex;
  margin-bottom: 4px;

  position: relative;
}

#banner {
  position: absolute;
  top: 0;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  width: 100%;
  height: 4ex;
  background-color: gray;
  z-index: 0;
  border-bottom: 2px ridge #333;
}

.menubar {
  flex: 1;

  /* Put the menu items (children) to the left */
  display: flex;
  justify-content: flex-start;

  box-sizing: border-box;

  /*border: 2px yellow solid;*/
  font-size: large;
}

.menuitem {
  flex: 1;
  box-sizing: border-box;
  margin-top: 3px;
  margin-bottom: 3px;
  padding-left: 2px;
  padding-right: 2px;
  /*border: 2px red solid;*/
}

.menuitem a {
  text-decoration: none;

  display: block;
  text-align: center;

  color: white;
  padding-left: 0.5ch;
  padding-right: 0.5ch;
  min-width: 10ch;

  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;

  background-color: #333;
  border-color: #333;
  border-radius: 3px;
  border: 3px solid #333;
}

.menuitem a:hover{
  background-color: #555;
  border-color: #555;
}

#spring {
  flex: 1 100;

  box-sizing: border-box;
  /*margin: 3px;*/
  /*border: 2px #33FF00 solid;*/
  flex-basis: 92vw;
}

/*----------------------------------------------------------------------------*/

.container {
    box-sizing: border-box;

    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

.tile {
    flex-basis: 23vw;
    min-width: 20px;
    background-color: inherit;
    display: flex;
    position: relative;
}

img {
    box-sizing: border-box;
    display: block;
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 2px;
    border: 0;
    transition-duration: 0.1s;
    transition-timing-function: ease-in-out;
}

#albums img {
    display: inline-block;
}

img:active {
    transform: scale(0.95);
    opacity: 0.6;
}

.img_text { /* The parent is tile and not img! */
    position: absolute;
    top: 90%;
    left: 0;
    right: 0;
    transform: translate(0, -50%);
    text-align: center;
    font-size: x-large;
    font-weight: 500;
    color: white;
}

span {
    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
}

/*----------------------------------------------------------------------------*/

@media screen and (orientation: landscape) {

  nav {
    max-width: 93vw;
  }

  .tile {
      flex-basis: 31vw;
  }
}

@media screen and (orientation: portrait) {
  nav {
    max-width: 92vw;
  }

    .tile {
        flex-basis: 46vw;
    }
}

